Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-dominio-dev/korus-dominio-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: korusdominio-loadbalancer
  namespace: korus-dominio-dev
spec:
  type: LoadBalancer
  ports:
  - port: 27017
  selector:
    app: korusdominio
