Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-dominio-dev/korus-dominio-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: korus-dominio-dev-ingress
  namespace: korus-dominio-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - api-dominios.dev.pixeon.cloud
    secretName: korus-dominio-dev-secret
  rules:
  - host: api-dominios.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-dominios
          servicePort: 80
